--- a/app/src/main/res/layout/activity_listado_carrera.xml
+++ b/app/src/main/res/layout/activity_listado_carrera.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="nemesis.diiscover.CarreraListadoActivity">
+    tools:context="nemesis.diiscover.CarreraListadoActivity"
+    android:background="#ffd3fcff">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/carreralist"
