--- a/app/src/main/res/layout-land/activity_asignatura_listado.xml
+++ b/app/src/main/res/layout-land/activity_asignatura_listado.xml
@@ -4,12 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="nemesis.diiscover.CarreraListadoActivity"
+    tools:context="nemesis.diiscover.AsignaturaListadoActivity"
     android:background="#ffd3fcff">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/carreralist"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"  />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/asignaturalist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 </RelativeLayout>
