--- a/app/src/main/res/layout/activity_laboratorio_listado_.xml
+++ b/app/src/main/res/layout/activity_laboratorio_listado_.xml
@@ -4,9 +4,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="nemesis.diiscover.LaboratorioListadoActivity">
+    tools:context="nemesis.diiscover.LaboratorioListado_Activity"
+    android:background="#ffd3fcff">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/laboratoriolist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"  />
 
 </RelativeLayout>
