--- a/app/src/main/res/layout-land/carrera.xml
+++ b/app/src/main/res/layout-land/carrera.xml
@@ -9,7 +9,7 @@
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+        android:id="@+id/card_viewcarrera"
         android:layout_margin="4dp"
         android:layout_marginBottom="3dp"
         android:layout_marginTop="1dp"
