--- a/app/src/main/res/layout/Asignatura.xml
+++ b/app/src/main/res/layout/Asignatura.xml
@@ -9,18 +9,18 @@
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_viewcarr"
+        android:id="@+id/card_viewasignatura"
         android:layout_margin="4dp"
         android:layout_marginBottom="3dp"
         android:layout_marginTop="1dp"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="135dp"
         card_view:cardCornerRadius="5dp"
         card_view:cardBackgroundColor="#FFFFFF"
         android:shadowColor="#ae010001">
 
         <ImageView
-            android:id="@+id/ImageViewCarreraImagen"
+            android:id="@+id/ImageViewAsignaturaImagen"
             android:layout_width="fill_parent"
             android:layout_height="155dp"
             android:contentDescription="@string/sample_text_image"
@@ -30,25 +30,23 @@
             android:scaleType="fitXY" />
 
         <TextView
-            android:id="@+id/textViewCarreraNombre"
+            android:id="@+id/textViewAsignaturaNombre"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="start"
-            android:layout_marginTop="115dp"
+            android:layout_marginTop="102dp"
             android:background="#c2000000"
             android:textColor="#FFFFFF"
             android:textSize="18dp"
             android:text=""
             android:paddingBottom="5dp"
-            android:paddingTop="7dp"
+            android:paddingTop="4dp"
             android:textAlignment="center"
             android:paddingLeft="11dp"
             android:paddingRight="4dp" />
 
-
-
         <TextView
-            android:id="@+id/textViewCarreraID"
+            android:id="@+id/textViewAsignaturaID"
             android:layout_width="0px"
             android:layout_height="0px"
             android:gravity="center"
