--- a/app/src/main/res/layout-land/activity_asignatura_listado.xml
+++ b/app/src/main/res/layout-land/activity_asignatura_listado.xml
@@ -6,11 +6,44 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="nemesis.diiscover.AsignaturaListadoActivity"
     android:background="#ffd3fcff">
+    <TextView
+        android:text="Cuatrimestre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/TextViewCuatrimestre"
+        android:layout_marginLeft="10dp"
+        android:textSize="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+    <TextView
+        android:text="Especialidad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/TextViewEspecilialidad"
+        android:layout_marginLeft="20dp"
+        android:layout_alignTop="@+id/TextViewCuatrimestre"
+        android:layout_toEndOf="@+id/TextViewCuatrimestre"
+        android:textSize="16dp" />
+    <Spinner
+        android:id="@+id/spinnerespecialidad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/TextViewCuatrimestre"
+        android:layout_alignParentStart="true" />
+    <Spinner
+        android:id="@+id/spinnercuatri"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/spinnerespecialidad"
+        android:layout_toEndOf="@+id/TextViewCuatrimestre" />
+
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/asignaturalist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:layout_below="@+id/spinnercuatri" />
 </RelativeLayout>
