--- a/app/src/main/res/layout/activity_listado_carrera.xml
+++ b/app/src/main/res/layout/activity_listado_carrera.xml
@@ -7,6 +7,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/carreralist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"  />
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
