--- a/app/src/main/res/layout-land/carrera.xml
+++ b/app/src/main/res/layout-land/carrera.xml
@@ -9,7 +9,7 @@
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_viewcarrera"
+        android:id="@+id/card_viewcarr"
         android:layout_margin="4dp"
         android:layout_marginBottom="3dp"
         android:layout_marginTop="1dp"
@@ -17,8 +17,7 @@
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="5dp"
         card_view:cardBackgroundColor="#FFFFFF"
-        android:shadowColor="#ae010001"
-        android:onClick="irAsignatuars">
+        android:shadowColor="#ae010001" >
 
         <ImageView
             android:id="@+id/ImageViewCarreraImagen"
@@ -50,6 +49,13 @@
 
         <TextView
             android:id="@+id/textViewCarreraID"
+            android:layout_width="0px"
+            android:layout_height="0px"
+            android:gravity="center"
+            android:layout_marginTop="125dp"
+            android:text="" />
+        <TextView
+            android:id="@+id/textViewCarreraCuatrimestres"
             android:layout_width="0px"
             android:layout_height="0px"
             android:gravity="center"
