--- a/app/src/main/res/layout/activity_listado_carrera.xml
+++ b/app/src/main/res/layout/activity_listado_carrera.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="nemesis.diiscover.CarreraListadoActivity"
-    android:background="#ffd3fcff">
+    android:background="#B3E5FC">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/carreralist"
@@ -11,5 +11,11 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true" />
-
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/loadingPanel" />
 </RelativeLayout>
