--- a/app/src/main/res/layout/activity_asignatura_listado.xml
+++ b/app/src/main/res/layout/activity_asignatura_listado.xml
@@ -1,11 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     tools:context="nemesis.diiscover.AsignaturaListadoActivity"
-    android:background="#ffd3fcff">
+    android:background="#B3E5FC">
     <TextView
         android:text="Cuatrimestre"
         android:layout_width="wrap_content"
@@ -18,7 +15,8 @@
         android:textSize="14dp"
         android:layout_alignTop="@+id/TextViewEspecilialidad"
         android:layout_toEndOf="@+id/TextViewEspecilialidad"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp" />
     <TextView
         android:text="Especialidad"
         android:layout_width="wrap_content"
@@ -27,19 +25,22 @@
         android:id="@+id/TextViewEspecilialidad"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="130dp"
-        android:textSize="14dp" />
+        android:textSize="14dp"
+        android:layout_marginTop="10dp" />
     <Spinner
         android:id="@+id/spinnerespecialidad"
         android:layout_width="wrap_content"
         android:layout_marginLeft="14dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/TextViewEspecilialidad"
-        android:layout_toStartOf="@+id/spinnercuatri" />
+        android:layout_toStartOf="@+id/spinnercuatri"
+        android:layout_marginBottom="15dp"/>
     <Spinner
         android:id="@+id/spinnercuatri"
         android:layout_width="wrap_content"
         android:layout_marginLeft="2dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
         android:layout_alignTop="@+id/spinnerespecialidad"
         android:layout_toEndOf="@+id/TextViewEspecilialidad" />
     <android.support.v7.widget.RecyclerView
