--- a/app/src/main/res/layout/asignaturas.xml
+++ b/app/src/main/res/layout/asignaturas.xml
@@ -5,7 +5,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:gravity="center_horizontal"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#B3E5FC">
 
 
 
@@ -30,9 +31,10 @@
             android:textAlignment="center"
             android:paddingLeft="11dp"
             android:paddingRight="4dp"
-            android:background="#9c0027ff"
+            android:background="#03A9F4"
             android:singleLine="false"
-            android:elevation="10dp" />
+            android:elevation="10dp"
+            android:onClick="botonSelecionado" />
 
       <!--  <TextView
             android:id="@+id/textViewAsignaturaNombre"
