Asignaturas hechas (correccion errores)

--- a/app/src/main/res/layout/activity_incidencia.xml
+++ b/app/src/main/res/layout/activity_incidencia.xml
@@ -30,6 +30,8 @@
         android:text="@string/boton_enviar_incidencia"
         android:id="@+id/boton_enviar_incidencia"
         android:layout_gravity="right"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        android:background="#03A9F4"
+        android:textAlignment="center"/>
 
 </LinearLayout>
