--- a/app/src/main/res/layout/activity_profesor_listado.xml
+++ b/app/src/main/res/layout/activity_profesor_listado.xml
@@ -1,13 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="nemesis.diiscover.CarreraListadoActivity"
+    tools:context="nemesis.diiscover.ProfesorListadoActivity"
     android:background="#B3E5FC">
-
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/laboratoriolist"
+        android:id="@+id/profesorlist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
