--- a/app/src/main/res/layout-land/carrera.xml
+++ b/app/src/main/res/layout-land/carrera.xml
@@ -54,7 +54,13 @@
             android:gravity="center"
             android:layout_marginTop="125dp"
             android:text="" />
-
+        <TextView
+            android:id="@+id/textViewCarreraCuatrimestres"
+            android:layout_width="0px"
+            android:layout_height="0px"
+            android:gravity="center"
+            android:layout_marginTop="125dp"
+            android:text="" />
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
