--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
         android:text="registrarse"
         android:id="@+id/button"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="irARegistrarse" />
 
     <Button
         android:layout_width="wrap_content"
@@ -17,7 +18,8 @@
         android:text="identificarse"
         android:id="@+id/button2"
         android:layout_below="@+id/button"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="irAIdentificarse" />
 
     <Button
         android:layout_width="wrap_content"
