--- a/app/src/main/res/menu/menu_profesor_pantalla.xml
+++ b/app/src/main/res/menu/menu_profesor_pantalla.xml
@@ -1,10 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="nemesis.diiscover.AsignaturaPantalla">
+    tools:context="nemesis.diiscover.ProfesorPantalla">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
-    <item android:id="@+id/action_profesores" android:title="@string/action_profesores"
-        android:orderInCategory="1" app:showAsAction="ifRoom"
-        android:icon="@drawable/profesor_icono"/>
 </menu>
