--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,69 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"   android:background="#B3E5FC"
+    android:layout_height="match_parent"   android:background="#8edcfc"
     tools:context=".MainActivity">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="registrarse"
-        android:id="@+id/button"
+        android:layout_width="175dp"
+        android:layout_height="200dp"
+        android:text="Laboratorios"
+        android:id="@+id/laboratorios"
+        android:drawableTop="@drawable/computer"
+        style="?android:attr/borderlessButtonStyle"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:onClick="irARegistrarse" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="40dp"
+        android:onClick="irALaboratorios" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="identificarse"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button"
+        android:layout_width="175dp"
+        android:layout_height="200dp"
+        android:text="asignaturas"
+        android:id="@+id/Asignaturas"
+        android:drawableTop="@drawable/asignaturas"
+        style="?android:attr/borderlessButtonStyle"
+
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:onClick="irAAsignaturas"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="10dp" />
+
+    <Button
+        android:layout_width="175dp"
+        android:layout_height="200dp"
+
+        android:id="@+id/profesores"
+        android:onClick="irAProfesores"
+
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:drawableTop="@drawable/profesor"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_marginRight="10dp"
+        android:text="profesores"
+        android:layout_below="@+id/laboratorios"
         android:layout_alignParentStart="true"
-        android:onClick="irAIdentificarse" />
-
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="40dp" />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="laboratorios"
-        android:id="@+id/button3"
-        android:layout_below="@+id/button2"
-        android:layout_alignParentStart="true" />
+        android:layout_width="175dp"
+        android:layout_height="200dp"
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Incidencia"
-        android:id="@+id/button4"
-        android:layout_below="@+id/button3"
-        android:layout_alignParentStart="true"
-        android:onClick="irAIncidencia" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Asignaturas"
-        android:id="@+id/button5"
-        android:layout_below="@+id/button4"
-        android:layout_alignParentStart="true"
-        android:onClick="irAAsignaturas" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Profesores"
-        android:id="@+id/button6"
-        android:layout_below="@+id/button5"
-        android:layout_alignParentStart="true"
-        android:onClick="irAProfesores" />
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:id="@+id/perfil"
+        android:onClick="irAProfesores"
+        android:drawableTop="@drawable/perfil"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_marginRight="10dp"
+        android:text="ver perfil"
+        android:layout_alignTop="@+id/profesores"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
