--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_perfil" android:title="Ver perfil"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_incidencia" android:title="Incidencia"
+        android:orderInCategory="150" app:showAsAction="never" />
 </menu>
