--- a/app/src/main/res/layout-land/activity_profesor_pantalla.xml
+++ b/app/src/main/res/layout-land/activity_profesor_pantalla.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="nemesis.diiscover.ProfesorPantalla"
-    android:background="#B3E5FC">
+    android:background="#8cd3ff">
 
     <ImageView
         android:layout_width="90dp"
@@ -134,7 +134,7 @@
         android:text="ENVIAR CORREO"
         android:layout_gravity="right|center_vertical"
         android:textColor="#03A9F4"
-        android:background="#B3E5FC"
+        android:background="#8cd3ff"
         android:singleLine="true"
 
         android:layout_alignParentBottom="true"
