--- a/app/src/main/res/menu/menu_profesor_lisatdo.xml
+++ b/app/src/main/res/menu/menu_profesor_lisatdo.xml
@@ -2,6 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="nemesis.diiscover.ProfesorListadoActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_incidencia" android:title="@string/incidencia"
+        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_desconexion" android:title="@string/Desconexion"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
