--- a/app/src/main/res/layout-land/activity_registro.xml
+++ b/app/src/main/res/layout-land/activity_registro.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#B3E5FC"
+    android:background="#8cd3ff"
     >
 
 <LinearLayout
@@ -30,7 +30,7 @@
                 android:layout_width="400dp"
                 android:layout_height="wrap_content"
                 android:hint="Correo"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="20dp"
                 android:textColor="#ff000000"
                 android:layout_marginBottom="0dp"
                 android:textSize="20dp" />
@@ -117,7 +117,7 @@
             android:text="CONFIRMAR"
             android:layout_gravity="right|center_vertical"
             android:textColor="#03A9F4"
-            android:background="#B3E5FC"
+            android:background="#8cd3ff"
             android:layout_marginBottom="30dp"
             android:layout_marginRight="35dp" />
     </FrameLayout>
