--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#B3E5FC">
+    android:background="#8cd3ff">
 
 
     <LinearLayout
@@ -46,7 +46,7 @@
                 android:hint="Correo"
                 android:singleLine="false"
                 android:phoneNumber="false"
-                android:textColor="#ffffffff"
+                android:textColor="#010101"
                 android:textSize="20dp" />
         </LinearLayout>
 
@@ -59,7 +59,7 @@
                 android:layout_width="234dp"
                 android:layout_height="wrap_content"
                 android:hint="Nombre de usuario no encontrado"
-                android:textColorHint="#fffbfffb"
+                android:textColorHint="#010101"
                 android:layout_marginBottom="0dp"
                 android:visibility="invisible" />
 
@@ -76,7 +76,7 @@
                 android:layout_weight="1"
                 android:hint="Contraseña"
                 android:textAllCaps="true"
-                android:textColor="#ffffffff"
+                android:textColor="#010101"
                 android:textIsSelectable="false"
                 android:inputType="textPassword"
                 android:textSize="20dp" />
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="Contraseña inválida"
-                android:textColorHint="#fffbfffb"
+                android:textColorHint="#010101"
                 android:visibility="invisible" />
 
         </LinearLayout>
@@ -101,7 +101,8 @@
             android:orientation="horizontal"
             android:layout_width="260dp"
             android:layout_height="fill_parent"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:background="#8cd3ff">
 
             <Button android:id="@+id/identificar"
                 android:text="INICIAR SESIÓN"
@@ -110,7 +111,7 @@
                 android:layout_marginRight="5dp"
                 android:textSize="14dp"
                 android:textStyle="bold"
-                android:background="#B3E5FC"
+                android:background="#8cd3ff"
                 style="?android:attr/borderlessButtonStyle"
                 android:textColor="#03A9F4" />
 
@@ -122,7 +123,7 @@
                 android:textSize="14dp"
                 android:textStyle="bold"
                 style="?android:attr/borderlessButtonStyle"
-                android:background="#B3E5FC"
+                android:background="#8cd3ff"
                 android:textColor="#03A9F4" />
 
         </LinearLayout>
