--- a/app/src/main/res/layout/laboratorio.xml
+++ b/app/src/main/res/layout/laboratorio.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:gravity="center_horizontal"
     android:layout_height="match_parent"
-    android:background="#B3E5FC">
+    android:background="#8cd3ff">
 
 
 
