--- a/app/src/main/res/layout/profesor.xml
+++ b/app/src/main/res/layout/profesor.xml
@@ -18,7 +18,8 @@
         android:layout_height="90dp"
         card_view:cardBackgroundColor="#B3E5FC"
 
-        android:shadowColor="#ae010001">
+        android:shadowColor="#ae010001"
+        android:background="#8cd3ff">
 
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -26,7 +27,7 @@
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            >
+            android:background="#8cd3ff">
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
@@ -84,13 +85,15 @@
             android:layout_marginTop="125dp"
             android:text="" />
 
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="0.4dp"
+                android:background="#757575"
+                android:layout_marginRight="25dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignStart="@+id/imageView2" />
+
         </RelativeLayout>
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="0.4dp"
-            android:background="#757575"
-            android:layout_marginLeft="90dp"
-            android:layout_marginRight="25dp"/>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
