--- a/app/src/main/res/menu/menu_asignatura_pantalla.xml
+++ b/app/src/main/res/menu/menu_asignatura_pantalla.xml
@@ -2,9 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="nemesis.diiscover.AsignaturaPantalla">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_incidencia" android:title="@string/incidencia"
+        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_desconexion" android:title="@string/Desconexion"
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_profesores" android:title="@string/action_profesores"
-        android:orderInCategory="1" app:showAsAction="ifRoom"
-        android:icon="@drawable/profesor_icono"/>
+        android:orderInCategory="1" app:showAsAction="always"
+        android:icon="@drawable/profesor"/>
 </menu>
