--- a/app/src/main/res/menu/menu_listado_grado.xml
+++ b/app/src/main/res/menu/menu_listado_grado.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context="nemesis.diiscover.CarreraListadoActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_incidencia" android:title="@string/incidencia"
+        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_desconexion" android:title="@string/Desconexion"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
