--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_perfil" android:title="Ver perfil"
+    <item android:id="@+id/action_incidencia" android:title="@string/incidencia"
         android:orderInCategory="100" app:showAsAction="never" />
-    <item android:id="@+id/action_incidencia" android:title="Incidencia"
-        android:orderInCategory="150" app:showAsAction="never" />
+    <item android:id="@+id/action_desconexion" android:title="@string/Desconexion"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
