--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,12 +57,12 @@
 
         android:textColor="#ffffff"
         android:textSize="20dp"
-        android:id="@+id/perfil"
-        android:onClick="irAPerfil"
-        android:drawableTop="@drawable/perfil"
+        android:id="@+id/ayudar"
+        android:onClick="irAAyudar"
+        android:drawableTop="@drawable/mano"
         style="?android:attr/borderlessButtonStyle"
         android:layout_marginRight="10dp"
-        android:text="ver perfil"
+        android:text="Ayúdanos"
         android:layout_alignTop="@+id/profesores"
         android:layout_alignParentEnd="true" />
 
