--- a/app/src/main/res/layout/activity_profesor_pantalla.xml
+++ b/app/src/main/res/layout/activity_profesor_pantalla.xml
@@ -127,16 +127,17 @@
     <Button android:id="@+id/confirmar"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:textSize="15dp"
+        android:textSize="14dp"
         android:textStyle="bold"
         android:text="ENVIAR CORREO"
         android:layout_gravity="right|center_vertical"
         android:textColor="#ffffff"
         android:background="#03A9F4"
-        android:singleLine="true"
+        android:singleLine="false"
 
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="irAEnviarCorreo" />
 
     <TextView
         android:layout_width="wrap_content"
