--- a/app/src/main/res/layout-land/activity_ayuda.xml
+++ b/app/src/main/res/layout-land/activity_ayuda.xml
@@ -117,9 +117,10 @@
         android:id="@+id/checkBox8"
         android:checked="false"
         android:textSize="15dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
         android:layout_below="@+id/checkBox5"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="2dp" />
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -130,7 +131,7 @@
         android:textSize="15dp"
         android:layout_below="@+id/checkBox"
         android:layout_marginBottom="3dp"
-        android:layout_alignEnd="@+id/checkBox6" />
+        android:layout_alignEnd="@+id/checkBox8" />
         </RelativeLayout>
 
 
@@ -142,7 +143,7 @@
         android:text="@string/boton_enviar_incidencia"
         android:id="@+id/button"
         android:layout_gravity="right"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="15dp"
         android:background="#03A9F4"
         android:textAlignment="center"
         android:textColor="#ffffff"
