--- a/app/src/main/res/layout-land/activity_profesor_pantalla.xml
+++ b/app/src/main/res/layout-land/activity_profesor_pantalla.xml
@@ -1,15 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent" android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
     tools:context="nemesis.diiscover.ProfesorPantalla"
     android:background="#8cd3ff">
 
     <ImageView
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@drawable/profesor"
         android:id="@+id/imagenProfesor"
         android:layout_alignParentTop="true"
@@ -59,7 +59,8 @@
         android:textSize="14dp"
         android:textColor="#757575"
         android:layout_below="@+id/textViewcorreoProfesor"
-        android:layout_toEndOf="@+id/imagenProfesor" />
+        android:layout_toEndOf="@+id/imagenProfesor"
+        android:layout_margin="5dp" />
     <View
         android:layout_width="fill_parent"
         android:layout_height="0.5dp"
@@ -126,22 +127,26 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp" />
     <Button android:id="@+id/confirmar"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
         style="?android:attr/borderlessButtonStyle"
-        android:textSize="17dp"
+
+
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:textSize="14dp"
         android:textStyle="bold"
         android:text="ENVIAR CORREO"
         android:layout_gravity="right|center_vertical"
-        android:textColor="#03A9F4"
-        android:background="#8cd3ff"
-        android:singleLine="true"
+        android:textColor="#ffffff"
+        android:background="#03A9F4"
+        android:singleLine="false"
 
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="irAEnviarCorreo"
+        />
 
     <TextView
-        android:layout_width="215dp"
+        android:layout_width="200dp"
         android:layout_height="70dp"
         android:id="@+id/textViewAsignaturasProfesor"
         android:padding="10dp"
@@ -149,5 +154,6 @@
         android:textSize="14dp"
         android:textColor="#757575"
         android:layout_below="@+id/textView12"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_margin="5dp" />
 </RelativeLayout>
