--- a/app/src/main/res/layout/activity_listado_carrera.xml
+++ b/app/src/main/res/layout/activity_listado_carrera.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="nemesis.diiscover.CarreraListadoActivity"
-    android:background="#8cd3ff">
+    android:background="#ffffff">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/carreralist"
@@ -10,7 +10,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp" />
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
