--- a/app/src/main/res/menu/menu_laboratorio_pantalla.xml
+++ b/app/src/main/res/menu/menu_laboratorio_pantalla.xml
@@ -2,4 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="nemesis.diiscover.laboratorioPantalla">
+    <item android:id="@+id/action_incidencia" android:title="@string/incidencia"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
