--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="color_primary">#03A9F4</color>
     <color name="color_primary_dark">#0277BD</color>
-    <color name="color_accent">#03A9F4</color>
+    <color name="color_accent">#ffffff</color>
 </resources>
