--- a/app/src/main/res/layout-land/activity_inicio.xml
+++ b/app/src/main/res/layout-land/activity_inicio.xml
@@ -4,14 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#8cd3ff">
+    android:background="#ffffff">
 
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:background="#ffffff">
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,7 +29,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:background="#ffffff">
 
         <LinearLayout android:orientation="horizontal"
             android:layout_width="wrap_content"
@@ -97,7 +99,8 @@
             android:orientation="horizontal"
             android:layout_width="320dp"
             android:layout_height="fill_parent"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:background="#ffffff">
 
             <Button android:id="@+id/identificar"
                 android:text="INICIAR SESIÓN"
@@ -108,7 +111,7 @@
                 android:textStyle="bold"
 
                 style="?android:attr/borderlessButtonStyle"
-                android:background="#8cd3ff"
+                android:background="#ffffff"
                 android:textColor="#03A9F4"/>
 
             <Button android:id="@+id/registrar"
@@ -118,7 +121,7 @@
                 android:layout_marginLeft="75dp"
                 android:textSize="14dp"
                 android:textStyle="bold"
-                android:background="#8cd3ff"
+                android:background="#ffffff"
 
                 style="?android:attr/borderlessButtonStyle"
                 android:textColor="#03A9F4" />
