--- a/app/src/main/res/layout-land/activity_registro.xml
+++ b/app/src/main/res/layout-land/activity_registro.xml
@@ -11,7 +11,8 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#ffffff">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -117,7 +118,7 @@
             android:text="CONFIRMAR"
             android:layout_gravity="right|center_vertical"
             android:textColor="#03A9F4"
-            android:background="#8cd3ff"
+            android:background="#ffffff"
             android:layout_marginBottom="30dp"
             android:layout_marginRight="35dp" />
     </FrameLayout>
