--- a/app/src/main/res/layout/activity_asignatura_listado.xml
+++ b/app/src/main/res/layout/activity_asignatura_listado.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="nemesis.diiscover.AsignaturaListadoActivity"
-    android:background="#8cd3ff">
+    android:background="#ffffff">
     <TextView
         android:text="Cuatrimestre"
         android:layout_width="wrap_content"
