--- a/app/src/main/res/layout/activity_asignatura_pantalla.xml
+++ b/app/src/main/res/layout/activity_asignatura_pantalla.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#8cd3ff"
+    android:background="#ffffff"
     tools:context="nemesis.diiscover.AsignaturaPantalla">
     <ScrollView
         android:layout_width="wrap_content"
