--- a/app/src/main/res/layout/activity_incidencia.xml
+++ b/app/src/main/res/layout/activity_incidencia.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
-    android:background="#8cd3ff">
+    android:background="#ffffff">
 
     <TextView
         android:text="@string/enviar_incidencia"
