--- a/app/src/main/res/layout/activity_laboratorio_listado_.xml
+++ b/app/src/main/res/layout/activity_laboratorio_listado_.xml
@@ -2,11 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="nemesis.diiscover.LaboratorioListado_Activity"
-    android:background="#8cd3ff">
+    android:background="#ffffff">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/laboratoriolist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"  />
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp" />
 
 </RelativeLayout>
