--- a/app/src/main/res/layout/activity_laboratorio_pantalla.xml
+++ b/app/src/main/res/layout/activity_laboratorio_pantalla.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="nemesis.diiscover.laboratorioPantalla"
-    android:background="#8cd3ff">
+    android:background="#ffffff">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -13,7 +13,7 @@
         android:id="@+id/imageView"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/pc" />
+        android:src="@drawable/computer2" />
 
     <TextView
         android:layout_width="wrap_content"
