--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"   android:background="#8cd3ff"
+    android:layout_height="match_parent"   android:background="#ffffff"
     tools:context=".MainActivity">
 
     <Button
@@ -8,9 +8,9 @@
         android:layout_height="200dp"
         android:text="Laboratorios"
         android:id="@+id/laboratorios"
-        android:drawableTop="@drawable/computer"
+        android:drawableTop="@drawable/computer2"
         style="?android:attr/borderlessButtonStyle"
-        android:textColor="#ffffff"
+        android:textColor="#03A9F4"
         android:textSize="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
@@ -23,10 +23,10 @@
         android:layout_height="200dp"
         android:text="asignaturas"
         android:id="@+id/Asignaturas"
-        android:drawableTop="@drawable/asignaturas"
+        android:drawableTop="@drawable/asignaturas2"
         style="?android:attr/borderlessButtonStyle"
 
-        android:textColor="#ffffff"
+        android:textColor="#03A9F4"
         android:textSize="20dp"
         android:onClick="irAAsignaturas"
         android:layout_alignParentTop="true"
@@ -41,9 +41,9 @@
         android:id="@+id/profesores"
         android:onClick="irAProfesores"
 
-        android:textColor="#ffffff"
+        android:textColor="#03A9F4"
         android:textSize="20dp"
-        android:drawableTop="@drawable/profesor"
+        android:drawableTop="@drawable/profesor2"
         style="?android:attr/borderlessButtonStyle"
         android:layout_marginRight="10dp"
         android:text="profesores"
@@ -55,11 +55,11 @@
         android:layout_width="175dp"
         android:layout_height="200dp"
 
-        android:textColor="#ffffff"
+        android:textColor="#03A9F4"
         android:textSize="20dp"
         android:id="@+id/ayudar"
         android:onClick="irAAyudar"
-        android:drawableTop="@drawable/mano"
+        android:drawableTop="@drawable/mano2"
         style="?android:attr/borderlessButtonStyle"
         android:layout_marginRight="10dp"
         android:text="Ayúdanos"
