--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#8cd3ff"
+    android:background="#ffffff"
     >
 
 <LinearLayout
@@ -119,7 +119,7 @@
             android:layout_gravity="right|center_vertical"
             android:layout_marginBottom="20dp"
             android:textColor="#03A9F4"
-            android:background="#8cd3ff"/>
+            android:background="#ffffff"/>
     </FrameLayout>
 </LinearLayout>
 
