--- a/app/src/main/res/layout/profesor.xml
+++ b/app/src/main/res/layout/profesor.xml
@@ -27,11 +27,11 @@
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#8cd3ff">
+            android:background="#ffffff">
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@drawable/profesor"
+            android:src="@drawable/profesor2"
             android:layout_marginLeft="10dp"
             android:id="@+id/imagenProfesor"
             android:scaleType="fitXY"
